Bug 406624 - dolphin titlebar garbled with baloosearch json query
Summary: dolphin titlebar garbled with baloosearch json query
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 19.04.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-17 10:07 UTC by merilius
Modified: 2020-04-14 15:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.0
Sentry Crash Report:


Attachments
dolphin screenshot (81.27 KB, image/png)
2019-04-25 08:53 UTC, merilius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description merilius 2019-04-17 10:07:17 UTC
SUMMARY
After a serach is made in dolphin the titlebar becomes replaced with a really long and human-unreadable json query to baloosearch. 

STEPS TO REPRODUCE
Start dolphin, click find, type foo, press enter 

OBSERVED RESULT
dolphin titlebar becomes:
baloosearch:?json=%7B%0A    %22dayFilter%22: 0,%0A    %22includeFolder%22: %22/home/user%22,%0A    %22monthFilter%22: 0,%0A    %22searchString%22: %22filename:%5C%22foo%5C%22%22,%0A    %22term%22: %7B%0A        %22filename%22: %7B%0A            %22$ct%22: %22foo%22%0A        %7D%0A    %7D,%0A    %22yearFilter%22: 0%0A%7D%0A&title=Query Results from 'foo' — Dolphin

EXPECTED RESULT
Just the "title" part of the query, i.e.
"Query Results from 'foo' — Dolphin"
Or even better: "Dolphin -- search results of 'foo'"

SOFTWARE/OS VERSIONS
Arch Linux
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 1 Nate Graham 2019-04-17 18:29:36 UTC
Hmm, I don't see this with Dolphin from 18.12.3 or git master, with either KDE Frameworks 5.56 or git master. Can you attach a screenshot please?
Comment 2 merilius 2019-04-25 08:53:53 UTC
Created attachment 119623 [details]
dolphin screenshot
Comment 3 merilius 2019-04-25 08:56:21 UTC
Screenshot attached.
Meanwhile there was an update, so it is reproducible in the new version:

Currently:
Dolphin 5.57.0
KDE Frameworks 5.57.0
Qt 5.13.3 (built against 5.12.2)
The xcb windowing system
Comment 4 Nate Graham 2019-04-25 17:22:19 UTC
Very strange, I still cannot reproduce...
Comment 5 Ismael Asensio 2019-10-12 10:30:06 UTC
This happens if the option 'Show full path in title bar' is enabled.
¿Could you check if you have this option on?
Comment 6 Ismael Asensio 2019-12-26 16:01:07 UTC
Without further information, I'm guessing that this behavior is caused by the option 'Show full path in title bar' being enabled, and so "intended behavior". If that behavior should be changed for certain URL schemes, might be a different matter of discussion.
Comment 7 Bug Janitor Service 2020-01-10 04:33:07 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 8 Bug Janitor Service 2020-01-25 04:33:13 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 9 Antonio Prcela 2020-04-14 09:56:10 UTC
Can reproduce it and have fixed it.
https://phabricator.kde.org/D28815
Comment 10 Nate Graham 2020-04-14 15:15:27 UTC
Git commit 8de24d5802f8b1806ac26ad270e81cff1cae2111 by Nate Graham, on behalf of Antonio Prcela.
Committed on 14/04/2020 at 15:15.
Pushed by ngraham into branch 'release/20.04'.

Display readable titlebar text while using search and full paths in titlebar

Summary:
FIXED-IN: 20.08

Reviewers: #vdg, #dolphin, iasensio, elvisangelaccio, ngraham, meven

Reviewed By: #vdg, #dolphin, ngraham, meven

Subscribers: meven, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D28815

M  +8    -7    src/dolphinviewcontainer.cpp

https://commits.kde.org/dolphin/8de24d5802f8b1806ac26ad270e81cff1cae2111