Display readable titlebar text while using search and full paths in titlebar

Summary:
BUG: 406624
FIXED-IN: 20.08

Reviewers: #vdg, #dolphin, iasensio, elvisangelaccio, ngraham, meven

Reviewed By: #vdg, #dolphin, ngraham, meven

Subscribers: meven, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D28815